# football_ndk

./: .gitignore  ANativeWindowUtils.cpp  ANativeWindowUtils.h  CMakeLists.txt  FootballBlController.h  FootballConfig.cpp  FootballConfig.h  MemTrace.cpp  MemTrace.h  NdkAppLoader.h  README.md  StbImage_.cpp  StbImage_.h  TestCmdline.cpp  TestCmdline.h  TestCmdline_test.cpp  TestFootballMain.cpp  android_logcat_.h  build.sh  build_arm64-v8a.bat  build_armeabi-v7a.bat  build_linux_arm.sh  build_linux_arm64.sh  football_shared.cpp  footballd.cpp  push_assets.py  push_football.sh  readme.txt
SaschaWillems/: download_assets.py  readme.txt
SaschaWillems/android/examples/base/: CMakeLists.txt
SaschaWillems/android/examples/computeparticles/: CMakeLists.txt
SaschaWillems/android/examples/computeraytracing/: CMakeLists.txt
SaschaWillems/android/examples/computeshader/: build.gradle
SaschaWillems/android/examples/computeshader_foot/: CMakeLists.txt
SaschaWillems/android/examples/vulkanscene/: CMakeLists.txt  build.gradle
SaschaWillems/android/examples/vulkanscene/gradle/wrapper/: gradle-wrapper.properties
SaschaWillems/base/: VulkanAndroid.cpp  VulkanAndroid.h  VulkanDebug.cpp  VulkanDevice.hpp  VulkanInitializers.hpp  VulkanModel.hpp  VulkanSwapChain.hpp  VulkanTexture.hpp  VulkanTools.cpp  VulkanTools.h  VulkanUIOverlay.cpp  VulkanglTFModel.hpp  vulkanexamplebase.cpp  vulkanexamplebase.h
SaschaWillems/examples/computeparticles/: computeparticles.cpp
SaschaWillems/examples/computeraytracing/: computeraytracing.cpp
SaschaWillems/examples/computeshader/: computeshader.cpp
SaschaWillems/examples/computeshader_foot/: computeshader.cpp  computeshader_foot.cpp
SaschaWillems/examples/vulkanscene/: vulkanscene.cpp
binder/: BinderTest.cpp
cmdline/: CmdLine.h  CmdLineFactory.cpp  CmdLineFactory.h  CmdLineUtils.cpp  CmdLineUtils.h
cmdline/cmdline_lua/: CmdlineLuaImpl.cpp  CmdlineLuaImpl.h
cmdline/cmdline_v1/: CmdlineV1.cpp  CmdlineV1.h  MenuV1.cpp  MenuV1.h  linktable.c  linktable.h
cmdline/cmdline_v2/: CmdlineV2.cpp  CmdlineV2.h  CmdlineV3.cpp  CmdlineV3.h  cli.cpp  cli.h  cli_mock_utils.cpp  cli_predef.h  cli_readline.cpp  cli_simple.cpp
miniled/: DataGridView-for TCL-20190916 .demo  FootballBlController.h  Mbi6322Fb.cpp  Mbi6322Fb.h  MiniLedDev.h  TestCmdMiniLed.cpp  TestCmdMiniLed.h  TestMain_miniled.cpp  generate_demo_c_header.py  mbi6322_reference_settings.h  reg_override_1.h  reg_override_old.h  reg_override_old_10.h  reg_override_old_10_dead_dummy.h  spidev_test.c
ndk_extend/: ExtLibWrapper_c.h  NativeFootballReceiver.bidl  NativeFootballReceiver.h  NativeFootballReceiver.proto.inc  NativeFootballReceiver_Loader.cpp  NativeFootballReceiver_Loader.h  NativeFootballReceiver_extra.h  NativeHooApi.h  NativeHooApi.proto.inc  NativeHooApiLoader.cpp  NativeHooApiLoader.h  NativeHooApiStub.cpp  NativeHooApi_Loader.cpp  NativeHooApi_Loader.h  NativeServiceFootball.bidl  NativeServiceFootball.h  NativeServiceFootball.proto.inc  NativeServiceFootball_Loader.cpp  NativeServiceFootball_Loader.h  NativeServiceFootball_extra.h  TestService.bidl  TestService.h  TestService.proto.inc  TestService_Loader.cpp  TestService_Loader.h  generate_loader.py
ndk_extend/old/: ExtLibWrapper_c.h  NativeHooApiLoader.cpp  NativeHooApiLoader.h
pp/: FootballPP.h  FootballPPFactory.cpp  FootballPPFactory.h  FootballPPTester.cpp  FootballPPTester.h
pp/impl/: FootSessionGlesImpl1.cpp  FootSessionGlesImpl1.h  FootballPPCpu.cpp  FootballPPCpu.h  FootballPPGles.cpp  FootballPPGles.h  FootballPPUtils.cpp  FootballPPUtils.h  FootballPPVk.cpp  FootballPPVk.h
pp/impl/gpu_tonemapper/: EGLImageBuffer_KHR.cpp  EGLImageBuffer_KHR.h  glengine.cpp  glengine.h
pp/impl/gpu_tonemapper/utils/: sync_task.h
pp/impl/screenrecord/: EglWindow.cpp  EglWindow.h  Program.cpp  Program.h  TextRenderer.cpp  TextRenderer.h
standalone/: AAssetManagerImpl_.cpp  AAssetManagerImpl_.h  ImageReaderHolder.cpp  ImageReaderHolder.h  StbImageUtils.cpp  StbImageUtils.h  main.cpp  native_app_glue.c  native_app_glue.h  standalone_main.cpp
standalone/SaschaWillems/computedemo1/: CMakeLists.txt  Makefile  cmake_install.cmake  computedemo1.cpp  computedemo1_1.cpp  computedemo1_1.h  computedemo1_1_HistogramCompute.cpp  computedemo1_1_HistogramCompute.h  computedemo1_1_HistogramGraphics.cpp  computedemo1_1_HistogramGraphics.h  computedemo1_1_MasiaEO1.cpp  computedemo1_1_MasiaEO1.h  computedemo1_1_Parasite.cpp  computedemo1_1_Parasite.h  computeshaderdemo1.cpp  computeshaderdemo1.h  rgb2hsv.cpp.ref
standalone/SaschaWillems/computedemo1/assets/shaders/computeshader/: emboss_bak.comp  emboss_bak.comp.spv  generate-spirv_bak.bat
standalone/SaschaWillems/computedemo1/old_bak/: computedemo1.cpp  computedemo1_1.cpp  computedemo1_1.h  computedemo1_1_HistogramCompute.cpp  computedemo1_1_HistogramGrapher.cpp  computedemo1_1_HistogramGraphics .cpp.ok.bak  computedemo1_1_HistogramGraphics.cpp
standalone/SaschaWillems/computedemo1/ppvkimpl/: FootSessionVkImpl.cpp  FootSessionVkImpl.h
standalone/android-vulkan-tutorials/tutorial06_texture_v2/: CreateShaderModule_.cpp  CreateShaderModule_.h  VulkanMain_.cpp  VulkanMain_.hpp  android_main_vk_.cpp  vulkan_wrapper.cpp  vulkan_wrapper.h
standalone/android-vulkan-tutorials/tutorial06_texture_v2/assets/shaders/: tri.frag  tri.vert
standalone/gles/: GlesMain.cpp  GlesMain.h  RendererES2.cpp  RendererES3.cpp  android_main_gles.cpp  gles3jni.cpp
sys_api/: FootballSysApi.cpp  FootballSysApi.h  FootballSysApi.proto.inc
utils/: ANativeWindowUtils.cpp  ANativeWindowUtils.h  FootThread.h  MemTrace.cpp  MemTrace.h  NdkAppLoader.h  StbImage_.cpp  StbImage_.h  android_logcat_.h  debug_handler.cpp  debug_handler.h  foot_utils.cpp  foot_utils.h  football_debugger.cpp  football_debugger.h
